cfn_benchmark/cfn_templates/Jaylakhani37__AWS_CloudFormation_Templates/Wordpress_in_linux/WP_amazon_inux_2/WP_amazon_linux_2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create a WordPress website stack

Parameters:
  VpcId:
    Description: The ID of the VPC
    Type: AWS::EC2::VPC::Id
  SubnetA:
    Description: The ID of Subnet A
    Type: AWS::EC2::Subnet::Id
  SubnetB:
    Description: The ID of Subnet B
    Type: AWS::EC2::Subnet::Id
  DBName:
    Description: The name of the WordPress database
    Type: String
    Default: wordpress
  DBIdentifier:
    Description: The name of the WordPress database
    Type: String
    Default: wordpress-id
  DBUsername:
    Description: The username for the WordPress database
    Type: String
    Default: admin
  DBPassword:
    Description: The password for the WordPress database
    Type: String
    NoEcho: true
    MinLength: 8
    MaxLength: 41
    ConstraintDescription: Password must be between 8 and 41 characters long

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: wordpress-subnet-group
      DBSubnetGroupDescription: Subnet group for WordPress RDS
      SubnetIds:
        - !Ref SubnetA
        - !Ref SubnetB
    UpdateReplacePolicy: Retain
    DeletionPolicy: Delete

  DBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      Engine: mysql
      DBInstanceIdentifier: !Ref DBIdentifier
      DBName: !Ref DBName
      AllocatedStorage: 20
      DBInstanceClass: db.t2.micro
      EngineVersion: '8.0.32'
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref SecurityGroup
      BackupRetentionPeriod: 7
    UpdateReplacePolicy: Retain
    DeletionPolicy: Delete

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-06a0cd9728546d178
      KeyName: my one key
      SecurityGroupIds:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install httpd -y
          amazon-linux-extras install -y lamp-mariadb10.2-php7.4 php8.1
          systemctl start httpd
          systemctl enable httpd
          amazon-linux-extras enable php7.4
          yum clean metadata
          yum install -y php-{bcmath,cli,common,devel,gettext,gd,intl,json,mbstring,opcache,xml,zip} mysql git
          curl -sS https://getcomposer.org/installer | php
          mv composer.phar /usr/local/bin/composer
          git clone https://github.com/WordPress/WordPress.git /var/www/html/wordpress
          cd /var/www/html/wordpress
          chown -R apache:apache /var/www/html/wordpress
          systemctl restart httpd
Outputs:
  WordPressURL:
    Description: The URL of the WordPress website
    Value: !Sub "http://${EC2Instance.PublicIp}/wordpress"
